--- a/public/acerca.latte
+++ b/public/acerca.latte
@@ -45,7 +45,7 @@
           <div class="row row-cols-1 row-cols-sm-2 g-3 mb-3" data-aos="fade-up" data-aos-delay="0">
             {foreach $contextoAcerca->comite as $miembro}
             <div class="col">
-              <div class="d-flex align-items-start gap-3 p-3 bg-white rounded-3 shadow-sm h-100">
+              <div class="d-flex align-items-start gap-3 p-3 bg-white rounded-3 shadow-sm">
                 <div class="flex-shrink-0">
                   {var $fotoPath = $miembro['foto'] ?? $sindicatoActual?->logo}
                   {if $fotoPath}
