--- a/public/acerca.latte
+++ b/public/acerca.latte
@@ -49,9 +49,9 @@
                 <div class="card-body d-flex gap-3 align-items-start p-3">
                   <div class="flex-shrink-0">
                     {if $miembro['foto']}
-                      <img src="{resolveUploadUrl($miembro['foto'])}" alt="{$miembro['nombre']}" class="rounded-circle object-fit-cover" width="48" height="48">
+                      <img src="{resolveUploadUrl($miembro['foto'])}" alt="{$miembro['nombre']}" class="rounded-circle" width="48" height="48">
                     {else}
-                      <div class="avatar-placeholder rounded-circle d-inline-flex align-items-center justify-content-center bg-light text-secondary">
+                      <div class="rounded-circle bg-light d-inline-flex align-items-center justify-content-center text-secondary p-2">
                         <i class="bi bi-person-fill fs-4"></i>
                       </div>
                     {/if}
